..F....... [ZBX-7250] made gettext an optional feature for the frontend (Pavels)
A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
..F....... [ZBX-7336] fixed "Database type" selection in setup step 3, improved SQLite3 check and removed storing setup supported databases in cookies (Ivo)
..F....... [ZBX-7340] fixed incorrect error messages when imported objects reference unexisting objects (Pavels)
A.F....... [ZBX-7445] fixed frontend redundant call of history (Eduard)
..F....... [ZBX-7277] made item selection helper translatable (Ivo)
.......PS. [ZBX-6160] fixed memory leak in configuration syncer process (Sasha)
.......PS. [ZBX-6160] fixed "ORA-01000: maximum open cursors exceeded" error (Sasha)
..F....... [ZBX-7354] fixed resetting linked template list when trying to add template with empty field (Ivo)
.......PS. [ZBX-7360] fixed maximum IPMI sensor ID length; thanks to OpenIPMI author Corey Minyard (Andris, asaveljevs)
........S. [ZBX-7400] fixed possible server crash when processing trigger functions with text or log items with Oracle backend (Sasha)
........S. [ZBX-7400] fixed possible server crash when sending messages with Oracle backend (Sasha)
........S. [ZBX-7326] improved escalator idle time calculations and statistics reporting (wiper)
..F....... [ZBX-7355] fixed various prototype confirmation messages (Ivo)
..F....... [ZBX-7408] removed unnecessary variables and includes in slide show configuration (Ivo)
.D........ [ZBX-7034] improved Alias parameter description in the example configuration files (Richlv)
..F....... [ZBX-7337] fixed undefined index debug profiler (Eduard)
..F....... [ZBX-7337] fixed input parameters validation in multiple pages (Eduard, Sasha)
A......... [ZBX-7372] fixed undefined indexes in script.getscriptsbyhosts method (Ivo)